--- a/styles/FiltersBox.module.scss
+++ b/styles/FiltersBox.module.scss
@@ -28,6 +28,7 @@
   gap: 0.5rem;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .filter {
