--- a/styles/InfoBlock.module.scss
+++ b/styles/InfoBlock.module.scss
@@ -35,6 +35,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 1rem;
+  cursor: pointer;
 }
 
 .ability_desc {
